[package]
name = "json_digest"
version = "0.1.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2018"
description = "Produces a digest of a JSON value, while respecting JSON sematics."

[features]
default = ["sha256"]
b3 = ["blake3"]
sha256 = ["sodiumoxide"]
sha512 = ["sodiumoxide"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
byteorder = "1.3.2"
sodiumoxide = { version = "0.2.4", optional = true }
blake3 = { version = "0.1.0", optional = true }
